@@ -292,7 +292,7 @@
           <item row="4" column="1">
            <layout class="QHBoxLayout" name="horizontalLayout_8">
             <item>
-             <widget class="QComboBox" name="comboBox_axis_y"/>
+             <widget class="FeatureComboBox" name="comboBox_axis_y"/>
             </item>
             <item>
              <widget class="QComboBox" name="comboBox_scale_y">
@@ -339,7 +339,7 @@
              <number>0</number>
             </property>
             <item>
-             <widget class="QComboBox" name="comboBox_axis_x">
+             <widget class="FeatureComboBox" name="comboBox_axis_x">
               <property name="sizePolicy">
                <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
                 <horstretch>0</horstretch>
@@ -617,7 +617,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QComboBox" name="comboBox_marker_feature">
+             <widget class="FeatureComboBox" name="comboBox_marker_feature">
               <item>
                <property name="text">
                 <string>Area [µm]</string>
@@ -1006,6 +1006,11 @@
   </layout>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>FeatureComboBox</class>
+   <extends>QComboBox</extends>
+   <header>shapeout2.gui.widgets</header>
+  </customwidget>
   <customwidget>
    <class>RangeControl</class>
    <extends>QWidget</extends>
