@@ -2,6 +2,12 @@ import dclab
 from PyQt5 import QtCore, QtGui, QtWidgets
 
 
+#: These are features only visible in developer mode
+HIDDEN_FEATURES = []
+for ii in range(10):
+    HIDDEN_FEATURES.append(f"basinmap{ii}")
+
+
 class FeatureComboBox(QtWidgets.QComboBox):
     def __init__(self, *args, **kwargs):
         """A DC data aware combobox for displaying DC features
@@ -9,26 +15,49 @@ class FeatureComboBox(QtWidgets.QComboBox):
         The combobox uses different colors do indicate the
         availability of features. Features can be ancillary,
         innate, basin-based, etc.
+
+        This class serves as a drop-in replacement for QComboBox
+        with a few special properties:
+
+        - Call `set_dataset` with an instance of RTDCBase and the
+          list of options is automatically populated with the values
+          for this dataset, including coloring based on feature origin.
+        - Features defined in :const:`HIDDEN_FEATURES` are not shown in
+          the combobox if "advanced/developer mode" is not set in the
+          settings.
+        - Make sure to use `findData` and don't rely on any external
+          lists when using `addItem`, because some of the items may
+          not be added as explained in the previous point.
         """
         super(FeatureComboBox, self).__init__(*args, **kwargs)
         self.rtdc_ds = None
 
+        # determine whether we should hide certain features
+        settings = QtCore.QSettings()
+        devmode = bool(int(settings.value("advanced/developer mode", 0)))
+        self.hidden_feats = HIDDEN_FEATURES if not devmode else []
+
         # where the data at
-        self.data_role = QtCore.Qt.UserRole + 47
+        self.data_role = QtCore.Qt.UserRole
 
         # Set background color to white
         pal = self.palette()
         pal.setColor(self.backgroundRole(), QtGui.QColor(255, 255, 255))
+
+    def addItem(self, text, userData=None):
+        if userData not in self.hidden_feats:
+            super(FeatureComboBox, self).addItem(text, userData)
 
     def currentData(self, role=None):
         if role is None:
             role = self.data_role
         return super(FeatureComboBox, self).currentData(role)
 
-    def findData(self, data, role=None):
+    def findData(self, data, role=None, *args, **kwargs):
         if role is None:
             role = self.data_role
-        return super(FeatureComboBox, self).findData(data, role=role)
+        return super(FeatureComboBox, self).findData(data, role=role,
+                                                     *args, **kwargs)
 
     def set_dataset(self, rtdc_ds, default_choice=None):
         self.rtdc_ds = rtdc_ds
@@ -41,6 +70,8 @@ class FeatureComboBox(QtWidgets.QComboBox):
             raise ValueError("Please call `set_dataset` first!")
         # axes combobox choices
         ds_feats = self.rtdc_ds.features_scalar
+        # remove hidden features
+        [ds_feats.remove(f) for f in self.hidden_feats if f in ds_feats]
         ds_labels = [dclab.dfn.get_feature_label(f) for f in ds_feats]
         ds_colors = []
         ds_tips = []
